--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  font-family: "Open Sans", "Roboto", sans-serif;
+}
+
+.w-50 {
+  width: 50% !important;
+}
