--- a/src/app/components/task-manager/task-manager.component.scss
+++ b/src/app/components/task-manager/task-manager.component.scss
@@ -11,12 +11,13 @@
 .textarea,
 .select {
   display: block;
-  width: 98%;
+  width: 100%;
   padding: 10px;
   margin-top: 4px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 .textarea {
@@ -29,7 +30,7 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-right: 8px;
+  margin: 8px 8px 0 0;
   color: white;
 }
 
